# Decals

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists00.txt  CMakeLists01.txt  CMakeLists02.txt  CompilationEMSCRIPTENWindows.txt  README.md  TODOs.txt
Assets/: Monkey.glb  Monkey.gltf  PilotShirt.glb  utahTeapot.gltf
Assets/CaterpillarWorkboot/source/: sh_catWorkBoot_draco.glb
Assets/Jacket/: real_army_jacket.glb
Assets/Pilot/: shirt_1_lowPoly.gltf
Assets/Pilot/source/: PilotShirtDraco.glb
Assets/RV/source/: RV.glb  scene.gltf
Assets/astronaut/: license.txt  scene.gltf
Assets/caterpillar-work-boot/source/: sh_catWorkBoot.glb
buildWASM/: .ninja_deps  .ninja_log  App.data  build.ninja  calc.wasm  glue_decoder.cpp  glue_decoder.js  glue_encoder.cpp  glue_encoder.js  index.html  styles.css
buildWASM/submodules/draco/: draco_decoder.js  draco_encoder.js
docs/: App.data  App.js  index.html
docs/Assets/: sh_catWorkBoot_draco.glb
docs/shaders/: DBuffer.frag  Decals.frag  Decals.vert  GBuffer.frag  vertex.glsl
include/: OpenGLTF.h  calc.h  shader.h
include/glad/: glad.h
shaders/: DBuffer.frag  DBuffer.vert  Decals.frag  Decals.vert  DeferredPass.frag  DeferredPass.vert  FullScreen.frag  FullScreen.vert  GBuffer.frag  GBuffer.vert  HitPosition.frag  HitPosition.vert  JFA.frag  JFAShadertoyBufferA.frag  JFAShadertoyBufferB.frag  JFAShadertoyBufferC.frag  JFAShadertoyImage.frag  SDF.frag  fragment.glsl  vertex.glsl
src/: calc.cpp  glad.c  main.cpp  mainOne.cpp
wasm/: index.html  indexOne.html
